exploring the layout file and erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+
+    <%= link_to 'home', root_path%>
+    <%= link_to 'about', about_path%>
+    <%= link_to 'new courses', courses_new_path%>
+
     <%= yield %>
   </body>
 </html>
