--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,1 +1,14 @@
-<h1>This is the temp homepage</h1>
+<h1>Course Listing</h1>
+
+<ul>
+  <li>Code: CS 111 </li>
+  <li>Intro to Computer Science</li>
+  <li>Description: A thorugh intro to Computer Science</li>
+</ul>
+<ul>
+  <li>Code: CS 111 </li>
+  <li>Intro to Computer Science</li>
+  <li>Description: A thorugh intro to Computer Science</li>
+</ul>
+
+
