--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,7 @@
 <ul>
   <li>Code: CS 111 </li>
   <li>Intro to Computer Science</li>
-  <li>Description: A thorugh intro to Computer Science</li>
+  <li>Description: A thorough intro to Computer Science</li>
 </ul>
 
 
