--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,20 +9,50 @@
   </head>
 
   <body>
-    <nav>
-      <div class='container'>
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo right">Tech University</a>
-          <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li><a href="#">Courses</a></li>
-            <li><a href="#">Enrollments</a></li>
-            <li><a href="#">Account</a></li>
-          </ul>
+    <header>
+      <nav>
+        <div class='container'>
+          <div class="nav-wrapper">
+            <a href="#" class="brand-logo right">Tech University</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+              <li><a href="#">Courses</a></li>
+              <li><a href="#">Enrollments</a></li>
+              <li><a href="#">Account</a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
+    <main>
     <div class='container'>
-     <%= yield %>
+    <%= yield %>
     </div>
+    </main>
+    <div>
+    <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Tech university</h5>
+                <p class="grey-text text-lighten-4">The future of development training.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Information</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Help</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2020 Tech University
+            <a class="grey-text text-lighten-4 right" href="#!">About</a>
+            </div>
+          </div>
+        </footer>
+      </div>
   </body>
 </html>
