--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,14 +1,38 @@
-<h1>Course Listing</h1>
+<div class="row">
+  <div class="col s12">
+    <h3 class="center-align">Course Listing</h3>
+  </div>
+</div>
 
-<ul>
-  <li>Code: CS 111 </li>
-  <li>Intro to Computer Science</li>
-  <li>Description: A thorugh intro to Computer Science</li>
-</ul>
-<ul>
-  <li>Code: CS 111 </li>
-  <li>Intro to Computer Science</li>
-  <li>Description: A thorough intro to Computer Science</li>
-</ul>
+  <div class="row">
+    <div class="col s6 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">CS111: Intro to Computer Science</span>
+          <p>A thorough intro to Computer Science</p>
+        </div>
+        <div class="card-action">
+          <a href="#">Enroll</a>
+          <a href="#">Info</a>
+        </div>
+      </div>
+    </div>
+  <div class="col s6 m6">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">CS112: Intro to Computer Science 2</span>
+        <p>An intermediate look at Computer Science</p>
+      </div>
+      <div class="card-action">
+        <a href="#">Enroll</a>
+        <a href="#">Info</a>
+      </div>
+    </div>
+  </div>
+</div>
+  
+            
+
+
 
 
