--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,3 +1,14 @@
+<% if @student.errors.any?%>
+  <%= pluralize(@student.errors.count, "error") %>
+    prohibited your profile from  being created
+  <ul>
+    <% @student.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+  </ul>
+
+<% end %>
+
 <div class="container">
   <div class="row center sign-up-form">
     <div class="row center">
@@ -20,7 +31,7 @@
               </div>
               <div class ="row">
                 <div class="input-field col s12">
-                  <%= f.submit "Submit", class: "btn orange waves-effect waves-light right" %>
+                  <%= f.submit "SIGN UP", class: "btn orange waves-effect waves-light right" %>
                 </div>
               </div>
             <% end %>
