--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -16,13 +16,25 @@
               </div>
               <div class ="row">
                 <div class="input-field col s12">
-                  <%= f.label :email, placeholder: "Enter your Email Address" %>
-                  <%= f.email_field :email %>
+                  <%= f.email_field :email, placeholder: "Enter your Email Address" %>
+                  <%= f.label :email, class: "active" %>
                 </div>
               </div>
               <div class ="row">
                 <div class="input-field col s12">
-                  <%= f.submit(@student.new_record? ? "SIGN UP" : "Submit Updates", class: "btn orange waves-effect waves-light right") %>
+                  <%= f.password_field :password, placeholder: "Choose a password" %>
+                  <%= f.label :password, class: "active" %>
+                </div>
+              </div>
+              <div class ="row">
+                <div class="input-field col s12">
+                  <%= f.password_field :password_confirmation, placeholder: "Confirm your password" %>
+                  <%= f.label :password_confirmation, class: "active" %>
+                </div>
+              </div>
+              <div class ="row">
+                <div class="input-field col s12">
+                  <%= f.button(@student.new_record? ? '<i class="material-icons right">arrow_forward</i>Sign up'.html_safe : '<i class="material-icons right">arrow_forward</i>Submit chagnes'.html_safe, class: "btn orange waves-effect waves-light right") %>
                 </div>
               </div>
             <% end %>
