building authentication system

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -16,20 +16,20 @@
               </div>
               <div class ="row">
                 <div class="input-field col s12">
-                  <%= f.email_field :email, placeholder: "Enter your Email Address" %>
-                  <%= f.label :email, class: "active" %>
+                  <%= f.email_field :email, placeholder: "Enter your Email Address", autofocus: true %>
+                  <%= f.label :email %>
                 </div>
               </div>
-              <div class ="row">
+              <div class ="row">e
                 <div class="input-field col s12">
                   <%= f.password_field :password, placeholder: "Choose a password" %>
-                  <%= f.label :password, class: "active" %>
+                  <%= f.label :password %>
                 </div>
               </div>
               <div class ="row">
                 <div class="input-field col s12">
                   <%= f.password_field :password_confirmation, placeholder: "Confirm your password" %>
-                  <%= f.label :password_confirmation, class: "active" %>
+                  <%= f.label :password_confirmation %>
                 </div>
               </div>
               <div class ="row">
