restricting actions and views clean up

--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -9,7 +9,7 @@
               <div class ="row">
                 <div class="input-field col s12">
                   <%= f.email_field :email, placeholder: "Enter your Email Address" %>
-                  <%= f.label :email, class: "active" %>
+                  <%= f.label :email, class: 'active' %>
                 </div>
               </div>
               <div class ="row">
