--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col s12">
-    <h3 class="center-align">Students Directory</h3>
+    <h3 class="center-align">Course Listing</h3>
   </div>
 </div>
 
@@ -13,7 +13,9 @@
           <p><%= course.description %></p>
         </div>
         <div class="card-action">
-          <a href="#">Enroll</a>
+          <% if logged_in? && !(current_user.courses.include?(course))%>
+            <%= link_to 'Enroll', course_enroll_path(course_id: course.id), method: :post %>
+          <% end %>
           <a href="#">Info</a>
         </div>
       </div>
