--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,13 +1,18 @@
 <header>
       <ul id="dropdown1" class="dropdown-content">
         <li><%= session_link %></li>
-        <li><a href="#!">two</a></li>
+         <% if logged_in?%>
+          <li><%= link_to "Profile", students_path(current_user) %>
+        <% end %>
         <li class="divider"></li>
         <li><a href="#!">three</a></li>
       </ul>
       <ul id="dropdown2" class="dropdown-content">
         <li><%= session_link %></li>
-        <li><a href="#!">two</a></li>
+        <% if logged_in?%>
+          <li><%= link_to "Profile", students_path(current_user) %>
+        <% end %>
+        
         <li class="divider"></li>
         <li><a href="#!">three</a></li>
       </ul>
