--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -4,9 +4,20 @@
       <div class="card-content white-text">
         <span class="card-title">Name: <%= @student.name %></span>
         <p>Email: <%= @student.email %></p>
-        <p>Course Enrollments: None</p>
-      </div>
+        <p>Course Enrollments: None
+          <% if @student.courses.empty? %>
+            None
+          <% else %>
+            <ul>
+              <% @student.courses.each do |course| %>
+                <li><%= course.name %>
+            
+            <% end %>
+            </ul>
+          <% end %>
+        </p>
     </div>
+  </div>
     <% if current_user == @student %>
       <%= link_to '<i class="material-icons right">create</i>Edit your profile'.html_safe, edit_student_path(@student), class:"waves-effect waves-light btn" %>
     <% end %>
